--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -10,6 +10,7 @@ ned-path = .
 
 network = RSUExampleScenario
 
+
 ##########################################################
 #            Simulation parameters                       #
 ##########################################################
@@ -20,6 +21,7 @@ sim-time-limit = 6000s
 
 **.scalar-recording = true
 **.vector-recording = true
+warmup-period = 290s
 
 **.debug = false
 **.coreDebug = false
@@ -57,6 +59,7 @@ sim-time-limit = 6000s
 *.manager.autoShutdown = true
 *.manager.margin = 25
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+#*.manager.numVehicles = 100
 
 ##########################################################
 #                       RSU SETTINGS                     #
@@ -66,7 +69,7 @@ sim-time-limit = 6000s
 *.rsu[0].mobility.x = 2000
 *.rsu[0].mobility.y = 2000
 *.rsu[0].mobility.z = 3
-*.rsu[*].applType = "TraCIDemoRSU11p"
+*.rsu[*].applType = "TraCIRVVRSU11p"
 *.rsu[*].appl.debug = false
 *.rsu[*].appl.headerLength = 256 bit
 *.rsu[*].appl.sendBeacons = false
@@ -76,7 +79,6 @@ sim-time-limit = 6000s
 *.rsu[*].appl.beaconPriority = 3
 *.rsu[*].appl.dataPriority = 2
 *.rsu[*].appl.maxOffset = 0.005s
-
 
 ##########################################################
 #            11p specific parameters                     #
@@ -88,6 +90,7 @@ sim-time-limit = 6000s
 *.connectionManager.alpha = 2.0
 *.connectionManager.carrierFrequency = 5.890e9 Hz
 *.connectionManager.sendDirect = true
+#*.connectionManager.drawMaxIntfDist=true
 
 *.**.nic.mac1609_4.useServiceChannel = false
 
@@ -105,7 +108,7 @@ sim-time-limit = 6000s
 ##########################################################
 #                    WaveAppLayer                        #
 ##########################################################
-*.node[*].applType = "TraCIDemo11p"
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.debug = false
 *.node[*].appl.headerLength = 256 bit
 *.node[*].appl.sendBeacons = false
@@ -115,6 +118,7 @@ sim-time-limit = 6000s
 *.node[*].appl.beaconPriority = 3
 *.node[*].appl.dataPriority = 2
 *.node[*].appl.maxOffset = 0.005s
+*.node[*].appl.helloInterval = 10s
 
 ##########################################################
 #                      Mobility                          #
@@ -126,9 +130,9 @@ sim-time-limit = 6000s
 *.node[*].veinsmobility.x = 0
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
-*.node[*0].veinsmobility.accidentCount = 1
-*.node[*0].veinsmobility.accidentStart = 75s
-*.node[*0].veinsmobility.accidentDuration = 30s
+*.node[*0].veinsmobility.accidentCount = 0 #1
+*.node[*0].veinsmobility.accidentStart = 75s 
+*.node[*0].veinsmobility.accidentDuration = 30s 
 
 [Config nodebug]
 description = "default settings"
@@ -141,4 +145,3 @@ description = "(very slow!) draw and print additional debug information"
 **.debug = true
 **.coreDebug = true
 *.annotations.draw = true
-
