--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -97,7 +97,8 @@ warmup-period = 240s
 *.**.nic.mac1609_4.txPower = 20mW
 *.**.nic.mac1609_4.bitrate = 18Mbps
 
-*.**.nic.phy80211p.sensitivity = -89dBm
+*.rsu[*].nic.phy80211p.sensitivity = 0dBm
+*.node[*].nic.phy80211p.sensitivity = -89dBm
 *.**.nic.phy80211p.maxTXPower = 10mW
 *.**.nic.phy80211p.useThermalNoise = true
 *.**.nic.phy80211p.thermalNoise = -110dBm
