sistemato un po il tutto

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -17,7 +17,8 @@ network = RSUExampleScenario
 debug-on-errors = true
 print-undisposed = false
 
-sim-time-limit = 6000s
+#sim-time-limit = 6000s
+sim-time-limit = 300s
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -121,6 +122,8 @@ warmup-period = 240s
 *.node[*].appl.dataPriority = 2
 *.node[*].appl.maxOffset = 0.005s
 *.node[*].appl.helloInterval = 10s
+*.node[*].appl.Prob_CH = 0.25
+*.node[*].appl.capacityCluster = 3
 
 ##########################################################
 #                      Mobility                          #
