--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -5,6 +5,7 @@ cmdenv-status-frequency = 10000000s
 
 #tkenv-default-config = debug
 #tkenv-default-run = 1
+repeat = 50
 tkenv-image-path = bitmaps
 ned-path = .
 
@@ -20,8 +21,13 @@ print-undisposed = false
 #sim-time-limit = 6000s
 sim-time-limit = 300s
 
-**.scalar-recording = true
-**.vector-recording = true
+
+**.rsu[*].**.mac1609_4.**.scalar-recording = false
+**.rsu[*].**.phy80211p.**.scalar-recording = false
+**.rsu[*].**.scalar-recording = true
+#**.scalar-recording = true
+**.scalar-recording = false
+**.vector-recording = false
 warmup-period = 240s
 
 
