--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -17,6 +17,7 @@ network = RSUExampleScenario
 ##########################################################
 debug-on-errors = true
 print-undisposed = false
+#record-eventlog = true
 
 #sim-time-limit = 6000s
 sim-time-limit = 450s
@@ -29,7 +30,6 @@ sim-time-limit = 450s
 **.scalar-recording = false
 **.vector-recording = false
 warmup-period = 240s
-
 
 **.debug = false
 **.coreDebug = false
