--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -5,7 +5,7 @@ cmdenv-status-frequency = 10000000s
 
 #tkenv-default-config = debug
 #tkenv-default-run = 1
-repeat = 100
+
 tkenv-image-path = bitmaps
 ned-path = .
 
@@ -128,9 +128,9 @@ warmup-period = 240s
 *.node[*].appl.dataPriority = 2
 *.node[*].appl.maxOffset = 0.005s
 *.node[*].appl.helloInterval = 10s
-*.node[*].appl.Prob_CH = 0.25
-*.node[*].appl.capacityCluster = 3
-
+*.node[*].appl.Prob_CH = ${p=1/10, 1/9, 1/8, 1/7, 1/6, 1/5, 1/4, 1/3, 1/2}
+*.node[*].appl.capacityCluster = ${c=1..18 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (2/($p))-1
 ##########################################################
 #                      Mobility                          #
 ##########################################################
