--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -173,3 +173,13 @@ repeat = 100
 *.node[*].appl.Prob_CH = ${p=1/20, 1/10, 1/8, 1/5, 1/2}
 *.node[*].appl.capacityCluster = ${c=1..30 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
+
+[Config newStatistic2]
+description = "run many time for statistic2"
+repeat = 100
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.node[*].appl.Prob_CH = ${p=1/25, 1/15, 1/4}
+*.node[*].appl.capacityCluster = ${c=1..30 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
