--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -165,21 +165,81 @@ description = "(very slow!) draw and print additional debug information"
 *.node[*].appl.capacityCluster = 3
 
 [Config statistic]
-description = "run many time for statistic"
+description = "run many time for statistic P=1/20"
 repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
-*.node[*].appl.Prob_CH = ${p=1/20, 1/10, 1/8, 1/5, 1/2}
-*.node[*].appl.capacityCluster = ${c=1..30 step 1}
+*.node[*].appl.Prob_CH = ${p=1/25}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+10
+
+[Config statistic1]
+description = "run many time for statistic P=1/20"
+repeat = 100
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.node[*].appl.Prob_CH = ${p=1/20}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+10
+
+[Config statistic2]
+description = "run many time for statistic P=1/15"
+repeat = 100
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.node[*].appl.Prob_CH = ${p=1/15}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+9
+
+[Config statistic3]
+description = "run many time for statistic P=1/10"
+repeat = 100
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.node[*].appl.Prob_CH = ${p=1/10}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+9
+
+[Config statistic4]
+description = "run many time for statistic P=1/8"
+repeat = 100
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.node[*].appl.Prob_CH = ${p=1/8}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
 
-[Config newStatistic2]
-description = "run many time for statistic2"
+[Config statistic5]
+description = "run many time for statistic P=1/5"
 repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
-*.node[*].appl.Prob_CH = ${p=1/25, 1/15, 1/4}
-*.node[*].appl.capacityCluster = ${c=1..30 step 1}
+*.node[*].appl.Prob_CH = ${p=1/5}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
+
+[Config statistic6]
+description = "run many time for statistic P=1/4"
+repeat = 100
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.node[*].appl.Prob_CH = ${p=1/4}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
+
+[Config statistic7]
+description = "run many time for statistic P=1/2"
+repeat = 100
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.node[*].appl.Prob_CH = ${p=1/2}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
