--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -23,7 +23,7 @@ print-undisposed = false
 #record-eventlog = true
 
 #sim-time-limit = 6000s
-sim-time-limit = 350s
+sim-time-limit = 450s
 
 
 **.rsu[*].**.mac1609_4.**.scalar-recording = false
@@ -120,7 +120,6 @@ warmup-period = 240s
 ##########################################################
 #                    WaveAppLayer                        #
 ##########################################################
-*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.debug = false
 *.node[*].appl.headerLength = 256 bit
 *.node[*].appl.sendBeacons = false
@@ -153,6 +152,7 @@ description = "default settings"
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = 0.25
 *.node[*].appl.capacityCluster = 3
 
@@ -161,6 +161,7 @@ description = "(very slow!) draw and print additional debug information"
 **.debug = true
 **.coreDebug = true
 *.annotations.draw = true
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = 0.25
 *.node[*].appl.capacityCluster = 3
 
@@ -170,6 +171,7 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/25}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+10
@@ -180,6 +182,7 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/20}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+10
@@ -190,6 +193,7 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/15}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+9
@@ -200,6 +204,7 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/10}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+9
@@ -210,6 +215,7 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/8}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
@@ -220,6 +226,7 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/5}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
@@ -230,6 +237,7 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/4}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
@@ -240,6 +248,18 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+*.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/2}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
+
+[Config statisticLeach]
+description = "run Leach"
+repeat = 10
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.node[*].applType = "TraCILeach11p"
+*.node[*].appl.Prob_CH = ${p=1/25,1/20,1/15,1/10,1/8,1/5,1/4,1/2}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+10
