rvv non funzionante

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -22,8 +22,8 @@ debug-on-errors = false
 print-undisposed = false
 #record-eventlog = true
 
-#sim-time-limit = 6000s
-sim-time-limit = 450s
+sim-time-limit = 6000s
+#sim-time-limit = 450s
 
 
 **.rsu[*].**.mac1609_4.**.scalar-recording = false
@@ -32,6 +32,9 @@ sim-time-limit = 450s
 **.node[*].**.mac1609_4.**.scalar-recording = false
 **.node[*].**.phy80211p.**.scalar-recording = false
 **.node[*].**.scalar-recording = true
+**.rsu[*].**.mac1609_4.**.vector-recording = false
+**.rsu[*].**.phy80211p.**.vector-recording = false
+**.rsu[*].**.vector-recording = true
 #**.scalar-recording = true
 **.scalar-recording = false
 **.vector-recording = false
@@ -276,3 +279,15 @@ repeat = 10
 *.node[*].appl.Prob_CH = ${p=1/25,1/20,1/15,1/10,1/8,1/5,1/4,1/2}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+10
+
+[Config statisticRVV]
+description = "run RVV simulation"
+repeat = 10
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+*.rsu[*].applType = "TraCIRVVRSU11p"
+*.node[*].applType = "TraCIRVV11p"
+*.node[*].appl.Prob_CH = ${p=1/25,1/20,1/15,1/10,1/8,1/5,1/4,1/2}
+*.node[*].appl.capacityCluster = ${c=1..40 step 1}
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+1
