--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -233,7 +233,7 @@ repeat = 100
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
 
 [Config statistic5]
-description = "run many time for statistic P=1/5"
+description = "run many time for statistic P=1/5, modified for more data"
 repeat = 100
 **.debug = false
 **.coreDebug = false
@@ -242,7 +242,7 @@ repeat = 100
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/5}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
-constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+7
 
 [Config statistic6]
 description = "run many time for statistic P=1/4"
