--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -209,7 +209,7 @@ repeat = 100
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+9
 
 [Config statistic3]
-description = "run many time for statistic P=1/10"
+description = "run many time for statistic P=1/10, modified for more data"
 repeat = 100
 **.debug = false
 **.coreDebug = false
@@ -218,10 +218,10 @@ repeat = 100
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/10}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
-constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+9
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+15
 
 [Config statistic4]
-description = "run many time for statistic P=1/8"
+description = "run many time for statistic P=1/8, modified for more data"
 repeat = 100
 **.debug = false
 **.coreDebug = false
@@ -230,7 +230,7 @@ repeat = 100
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/8}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
-constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+5
+constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+12
 
 [Config statistic5]
 description = "run many time for statistic P=1/5, modified for more data"
