--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -23,7 +23,8 @@ print-undisposed = false
 #record-eventlog = true
 
 #sim-time-limit = 6000s
-sim-time-limit = 350s
+#sim-time-limit = 2000s
+#sim-time-limit = 350s
 
 
 **.rsu[*].**.mac1609_4.**.scalar-recording = false
@@ -75,7 +76,7 @@ warmup-period = 240s
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
 *.manager.margin = 25
-*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+#*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 #*.manager.numVehicles = 100
 
 ##########################################################
@@ -157,6 +158,8 @@ description = "default settings"
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIRVVRSU11p"
 *.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = 0.25
@@ -167,6 +170,8 @@ description = "(very slow!) draw and print additional debug information"
 **.debug = true
 **.coreDebug = true
 *.annotations.draw = true
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIRVVRSU11p"
 *.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = 0.25
@@ -178,6 +183,8 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/25}
@@ -190,6 +197,8 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/20}
@@ -202,6 +211,8 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/15}
@@ -214,6 +225,8 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/10}
@@ -226,6 +239,8 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/8}
@@ -238,6 +253,8 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/5}
@@ -250,6 +267,8 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/4}
@@ -262,6 +281,8 @@ repeat = 100
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 350s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/2}
@@ -274,6 +295,8 @@ repeat = 10
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 450s
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 *.rsu[*].applType = "TraCILeachRSU11p"
 *.node[*].applType = "TraCILeach11p"
 *.node[*].appl.Prob_CH = ${p=1/25,1/20,1/15,1/10,1/8,1/5,1/4,1/2}
@@ -286,8 +309,10 @@ repeat = 10
 **.debug = false
 **.coreDebug = false
 *.annotations.draw = false
+sim-time-limit = 2000s
+*.manager.launchConfig = xmldoc(${sc="erlangen-low.launchd.xml","erlangen-medium.launchd.xml","erlangen-high.launchd.xml"})
 *.rsu[*].applType = "TraCIRVVRSU11p"
 *.node[*].applType = "TraCIRVV11p"
-*.node[*].appl.Prob_CH = ${p=1/25,1/20,1/15,1/10,1/8,1/5,1/4,1/2}
+*.node[*].appl.Prob_CH = ${p=1/15,1/10,1/8,1/5}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+1
