--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -17,8 +17,7 @@ network = RSUExampleScenario
 ##########################################################
 #            Simulation parameters                       #
 ##########################################################
-#debug-on-errors = true
-debug-on-errors = false
+debug-on-errors = true
 print-undisposed = false
 #record-eventlog = true
 
@@ -36,6 +35,9 @@ print-undisposed = false
 **.rsu[*].**.mac1609_4.**.vector-recording = false
 **.rsu[*].**.phy80211p.**.vector-recording = false
 **.rsu[*].**.vector-recording = true
+**.node[*].**.mac1609_4.**.vector-recording = false
+**.node[*].**.phy80211p.**.vector-recording = false
+**.node[*].**.vector-recording = true
 #**.scalar-recording = true
 **.scalar-recording = false
 **.vector-recording = false
@@ -43,10 +45,6 @@ warmup-period = 240s
 
 **.debug = false
 **.coreDebug = false
-
-*.playgroundSizeX = 2500m
-*.playgroundSizeY = 2500m
-*.playgroundSizeZ = 50m
 
 
 ##########################################################
@@ -73,7 +71,7 @@ warmup-period = 240s
 *.manager.port = 9999
 *.manager.moduleType = "org.car2x.veins.nodes.Car"
 *.manager.moduleName = "node"
-*.manager.moduleDisplayString = ""
+*.manager.moduleDisplayString = "Car"
 *.manager.autoShutdown = true
 *.manager.margin = 25
 #*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
@@ -86,6 +84,8 @@ warmup-period = 240s
 ##########################################################
 *.rsu[0].mobility.x = 100
 *.rsu[0].mobility.y = 2100
+#*.rsu[0].mobility.x = 1
+#*.rsu[0].mobility.y = 1
 *.rsu[0].mobility.z = 3
 *.rsu[*].appl.debug = false
 *.rsu[*].appl.headerLength = 256 bit
@@ -160,6 +160,9 @@ description = "default settings"
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIRVVRSU11p"
 *.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = 0.25
@@ -172,6 +175,9 @@ description = "(very slow!) draw and print additional debug information"
 *.annotations.draw = true
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIRVVRSU11p"
 *.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = 0.25
@@ -185,6 +191,9 @@ repeat = 100
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/25}
@@ -199,6 +208,9 @@ repeat = 100
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/20}
@@ -213,6 +225,9 @@ repeat = 100
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/15}
@@ -227,6 +242,9 @@ repeat = 100
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/10}
@@ -241,6 +259,9 @@ repeat = 100
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/8}
@@ -255,6 +276,9 @@ repeat = 100
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/5}
@@ -269,6 +293,9 @@ repeat = 100
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/4}
@@ -283,6 +310,9 @@ repeat = 100
 *.annotations.draw = false
 sim-time-limit = 350s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIGSRSU11p"
 *.node[*].applType = "TraCIGS11p"
 *.node[*].appl.Prob_CH = ${p=1/2}
@@ -297,6 +327,9 @@ repeat = 10
 *.annotations.draw = false
 sim-time-limit = 450s
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCILeachRSU11p"
 *.node[*].applType = "TraCILeach11p"
 *.node[*].appl.Prob_CH = ${p=1/25,1/20,1/15,1/10,1/8,1/5,1/4,1/2}
@@ -311,8 +344,25 @@ repeat = 10
 *.annotations.draw = false
 sim-time-limit = 2000s
 *.manager.launchConfig = xmldoc(${sc="erlangen-low.launchd.xml","erlangen-medium.launchd.xml","erlangen-high.launchd.xml"})
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
 *.rsu[*].applType = "TraCIRVVRSU11p"
 *.node[*].applType = "TraCIRVV11p"
 *.node[*].appl.Prob_CH = ${p=1/15,1/10,1/8,1/5}
 *.node[*].appl.capacityCluster = ${c=1..40 step 1}
 constraint = (1/($p))-1 <= ($c) && ($c) <= (1/($p))+1
+
+[Config careggiRVV]
+description = "run tot RVV simulation"
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+sim-time-limit = 2000s
+*.manager.launchConfig = xmldoc("careggi.launchd.xml")
+*.playgroundSizeX = 6000m
+*.playgroundSizeY = 6000m
+*.playgroundSizeZ = 6000m
+*.rsu[*].applType = "TraCIRVVRSU11p"
+*.node[*].applType = "TraCIRVVmap11p"
+*.node[*].appl.capacityCluster = 10
